GL: Change array macro to not conflict with opensubdiv variable names

Fix T97449 GPU subdivision: Crash on adding subdivision surface modifier