source/blender/gpu/opengl/gl_shader.cc
@@ -855,7 +855,7 @@ static char *glsl_patch_default_get()
   STR_CONCAT(patch, slen, "#define gpu_InstanceIndex (gl_InstanceID + gpu_BaseInstance)\n");
 
   /* Array compat. */
-  STR_CONCAT(patch, slen, "#define array(_type) _type[]\n");
+  STR_CONCAT(patch, slen, "#define gpu_Array(_type) _type[]\n");
 
   /* Derivative sign can change depending on implementation. */
   STR_CONCATF(patch, slen, "#define DFDX_SIGN %1.1f\n", GLContext::derivative_signs[0]);
@@ -882,7 +882,7 @@ static char *glsl_patch_compute_get()
   STR_CONCAT(patch, slen, "#extension GL_ARB_compute_shader :enable\n");
 
   /* Array compat. */
-  STR_CONCAT(patch, slen, "#define array(_type) _type[]\n");
+  STR_CONCAT(patch, slen, "#define gpu_Array(_type) _type[]\n");
 
   BLI_assert(slen < sizeof(patch));
   return patch;
